--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Display:ital,wght@0,100..900;1,100..900&display=swap");
+@import "bootstrap-icons/font/bootstrap-icons.css";
 
 body,
 h1,
@@ -11,7 +12,7 @@ p,
 span,
 div,
 a {
-  color: rgb(59, 59, 86) !important;
+  color: #282d33 !important;
   font-family: "Noto Sans Display";
 }
 
